force-app/main/default/objects/ProcessManagementMaster__c/ProcessManagementMaster__c.object-meta.xml
<CustomObject>
    <label>工程管理マスタ</label>
    <nameField>
        <displayFormat>PMM-{000000000}</displayFormat>
        <label>工程管理マスタ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>