force-app/main/default/objects/ProcessManagementMaster__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>工程管理マスタ</relationshipLabel>
    <relationshipName>ProcessManagementMaster</relationshipName>
    <type>Lookup</type>
</CustomField>