force-app/main/default/objects/ProcessManagementMaster__c/fields/CollectBankAccount__c.field-meta.xml
<CustomField>
    <fullName>CollectBankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>回収口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>工程管理マスタ</relationshipLabel>
    <relationshipName>ProcessManagementMaster</relationshipName>
    <type>Lookup</type>
</CustomField>