force-app/main/default/objects/ProcessManagementMaster__c/fields/IsIntegration__c.field-meta.xml
<CustomField>
    <fullName>IsIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>統合フラグ</label>
    <type>Checkbox</type>
</CustomField>