force-app/main/default/objects/ProcessManagementMaster__c/fields/IssueDueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDueDate__c</fullName>
    <label>発行期日</label>
    <length>40</length>
    <type>Text</type>
</CustomField>