force-app/main/default/objects/ProcessManagementMaster__c/fields/OperationCategory__c.field-meta.xml
<CustomField>
    <fullName>OperationCategory__c</fullName>
    <label>業務区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>契約金</fullName>
            </value>
            <value>
                <fullName>引越</fullName>
            </value>
            <value>
                <fullName>家賃</fullName>
            </value>
            <value>
                <fullName>委託料</fullName>
            </value>
            <value>
                <fullName>超過業務</fullName>
            </value>
            <value>
                <fullName>手数料</fullName>
            </value>
            <value>
                <fullName>解約</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>